# phdata_challenge_ml

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  create_model.py  debug_model.py  mypy.ini  pyproject.toml  training_report.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  TECHNICAL_DOCUMENTATION.md
model/v2/: model.pkl  model_features.json  model_metadata.json
scripts/: client.py
src/housing_service/: app.py  logger.py
src/scripts/: create_model.py  train_model.py
tests/: evaluate_model.py  test_api.py  test_health.py
