[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housing-service"
version = "0.1.0"
description = "Sound Realty housing price model service"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "phData Candidate" }]
license = { file = "LICENSE" }
keywords = ["mlops", "fastapi", "ml"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "scikit-learn>=1.5,<1.6",
  "pandas>=2.2,<2.3",
  "numpy>=2.0,<3",
  "joblib>=1.4,<2",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
]

# Runtime dependencies (PEP 621: array of PEP 508 requirement strings)

[project.optional-dependencies]
# Development extras
dev = [
  "black==24.8.0",
  "isort==5.13.2",
  "flake8==7.1.1",
  "mypy==1.11.1",
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "httpx==0.27.0",
  "pre-commit==3.8.0",
  "types-requests==2.32.0.20240712",
  "types-python-dateutil==2.9.0.20240316",
  "matplotlib",
  "seaborn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '/(\.git|\.venv|venv|build|dist|model)/'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["housing_service"]
skip = ["model", ".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

# flake8 prefers setup.cfg/.flake8; keeping minimal here for editors that read pyproject
[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "model", ".venv", "build", "dist"]
